syntax = "proto3";

package arenabuddy.public.v1;

message MtgaMatch {
  string id = 1;
  int32 controller_seat_id = 2;
  string controller_player_name = 3;
  string opponent_player_name = 4;
  string created_at = 5; // RFC3339 timestamp
}

message Deck {
  string name = 1;
  int32 game_number = 2;
  repeated int32 mainboard = 3;
  repeated int32 sideboard = 4;
}

message Mulligan {
  int32 game_number = 1;
  int32 number_to_keep = 2;
  string hand = 3;
  string play_draw = 4;
  string opponent_identity = 5;
  string decision = 6;
}

message MatchResult {
  int32 game_number = 1;
  int32 winning_team_id = 2;
  string result_scope = 3;
}

message OpponentDeck {
  repeated int32 cards = 1;
}

// Composite message grouping all match data for atomic upsert
message MatchData {
  MtgaMatch mtga_match = 1;
  repeated Deck decks = 2;
  repeated Mulligan mulligans = 3;
  repeated MatchResult results = 4;
  OpponentDeck opponent_deck = 5;
}

// --- Request/Response messages ---

message UpsertMatchDataRequest {
  MatchData match_data = 1;
}

message UpsertMatchDataResponse {}

message GetMatchDataRequest {
  string match_id = 1;
}

message GetMatchDataResponse {
  MatchData match_data = 1;
}

message ListMatchesRequest {}

message ListMatchesResponse {
  repeated MtgaMatch matches = 1;
}

message DeleteMatchRequest {
  string match_id = 1;
}

message DeleteMatchResponse {}

// --- Service ---

service MatchService {
  rpc UpsertMatchData(UpsertMatchDataRequest) returns (UpsertMatchDataResponse);
  rpc GetMatchData(GetMatchDataRequest) returns (GetMatchDataResponse);
  rpc ListMatches(ListMatchesRequest) returns (ListMatchesResponse);
  rpc DeleteMatch(DeleteMatchRequest) returns (DeleteMatchResponse);
}
